Fix the width computed on smaller devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,7 +43,7 @@ body {
 
 .shop {
   min-height: 100%;
-  width: fit-content;
+  width: max-content;
 
   display: flex;
   flex-direction: column;
